--- a/aulas/server/.env
+++ b/aulas/server/.env
@@ -1,7 +1,12 @@
 #Database
 DATABASE_URL = 'file:./dev.db?mode=memory&cache=shared'
 
-# Github
+# Github (web)
 
 GITHUB_CLIENT_ID = "f1e11ddbffa3b5da1060"
 GITHUB_CLIENT_SECRET = "f9d8b0c117cbb9cb7731e511d38789df632edb42"
+
+# Github (mobile)
+
+GITHUB_CLIENT_ID_MOBILE = "81aacd8ebced0905b9b0"
+GITHUB_CLIENT_SECRET_MOBILE = "617d19639312571e83b57bfc6b466540be964ca4"
