--- a/aulas/server/package.json
+++ b/aulas/server/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.2.0",
+    "@tailwindcss/forms": "^0.5.3",
     "@types/node": "^20.1.3",
     "dotenv": "^16.0.3",
     "eslint": "^8.40.0",
